corresponding pull requests
This cleans up any rogue staging applications and environments that outlasted
is cleans up any rogue staging applications and environments that outlasted
the closure of their corresponding pull requests.
**Why we have it**:
# Staging applications and environments should be destroyed after their
# corresponding pull request is closed or merged, especially to save money spent
# on Heroku App staging deployments for closed PRs.
# **Who does it impact**:
# Anyone with a closed, spammy, or deleted pull request in docs or docs-internal.

Signed-off-by: Behnam khani <94729188+behnamkhanioffical@users.noreply.github.com>

--- a/.github/workflows/remove-stale-staging-resources.yml
+++ b/.github/workflows/remove-stale-staging-resources.yml
@@ -1,7 +1,9 @@
 name: Remove stale staging resources
 
 # **What it does**:
+# Tht does**:
 # This cleans up any rogue staging applications and environments that outlasted
+# is cleans up any rogue staging applications and environments that outlasted
 # the closure of their corresponding pull requests.
 # **Why we have it**:
 # Staging applications and environments should be destroyed after their
